--- a/templates/admin/ai_history/show.html.twig
+++ b/templates/admin/ai_history/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html.twig' %}
 
-{% set page_title = 'Detail Historique IA' %}
+{% set page_title = 'Detail Historique AI' %}
 {% set page_subtitle = 'Vue complete du prompt et des logs.' %}
 {% set active_menu = 'ai_history' %}
 
