--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -107,7 +107,7 @@
                         <path d="M8 8h8M8 12h8M8 16h6" />
                     </svg>
                 </span>
-                <span class="admin-sidebar__label">Historique IA</span>
+                <span class="admin-sidebar__label">Historique AI</span>
             </a>
             <a class="admin-sidebar__item {{ active_menu is defined and active_menu == 'debug' ? 'admin-sidebar__item--active' : '' }}"
                href="{{ path('admin_debug') }}" style="--delay: 9">
